--- a/index.html
+++ b/index.html
@@ -7,11 +7,50 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
   <title>Frontend Mentor | Contact form</title>
-
+  <script src="./index.js"></script>
 </head>
 <body>
   <div class="">
+    <h1>Contact Us</h1>
+    <div>
+      <form action="">
+        <div class="">
+          <label for="first_name">First Name *</label>
+          <input type="text" name="first_name" id="first_name">
+        </div>
+        <div class="">
+          <label for="last_name">Last Name *</label>
+          <input type="text" name="last_name" id="last_name">
+        </div>
+        <div>
+          <label for="email">Email Address *</label>
+          <input type="email" name="email" id="email">
+        </div>
+        <div>
+          <label for="">Query Type *</label>
+          <div>
+            <input type="radio" name="type" value="GeneralEnquiry"> <label for="">General Enquiry</label>
+          </div>
+          <div>
+            <input type="radio" name="type" value="SupportRequest"> <label for="">Support Request</label>
+          </div>
+        </div>
 
+        <div>
+          <label for="message">Message *</label>
+          <textarea name="message" id="message"></textarea>
+        </div>
+
+        <div>
+          <input type="checkbox" name="" id="">
+          <label for="">I consent to being contacted by the team</label>
+        </div>
+
+        <div>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+    </div>
   </div>
 </body>
 </html>
